--- a/MyApp/templates/login.html
+++ b/MyApp/templates/login.html
@@ -8,7 +8,7 @@
     <form action="" method="post">
     <p>
         <label for=>Username</label>
-        <input type="text" name="username">
+        <input type="text" name="login">
     </p>
     <p>
         <label for=>Password</label>
